Fix thumbnail placement on Firefox

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -135,10 +135,12 @@ $item-thumbnail-size: 80px
 
   .item-thumbnail-picture
     align-items: center
+    bottom: 0
     display: flex
     height: 100%
     justify-content: center
     position: absolute
+    top: 0
 
     &::before
       align-items: center
